syntax = "proto3";

package com.github.ptracker.common;

option java_package = "com.github.ptracker.common";
option java_multiple_files = true;
option java_outer_classname = "EventMetadataProto";

message EventMetadata {

  string gardener_id = 1;

  int64 timestamp = 2;

  string comment = 3;
}
